--- a/src/GUI/DialogAbout.form
+++ b/src/GUI/DialogAbout.form
@@ -116,7 +116,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="0" red="99" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Mistere Abete"/>
+        <Property name="text" type="java.lang.String" value="Mistere Abate"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
