--- a/src/GUI/OrderDialog.form
+++ b/src/GUI/OrderDialog.form
@@ -43,9 +43,9 @@
                           <Component id="jLabel2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jComboBox1" min="-2" pref="102" max="-2" attributes="0"/>
-                          <Component id="jComboBox2" min="-2" pref="102" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jComboBox1" pref="117" max="32767" attributes="0"/>
+                          <Component id="jComboBox2" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
