--- a/src/GUI/IceCreamSundaeDialog.form
+++ b/src/GUI/IceCreamSundaeDialog.form
@@ -15,8 +15,8 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[625, 214]"/>
+    <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
+      <Point value="[250, 200]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
